# HyWrapper

./: .editorconfig  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  index.html  mkdocs.yml  objects.inv  run_tests.cmd  run_tests.sh  settings.gradle.kts  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  kotlin-ci.yml  publish.yml  python-ci.yml  typescript-ci.yml
api/python/client/: index.html
api/python/uuid_utils/: index.html
api/typescript/: index.html
api/typescript/classes/BazaarResponseHelper/: index.html
api/typescript/classes/CollectionsResponseHelper/: index.html
api/typescript/classes/DataNotPopulatedException/: index.html
api/typescript/classes/HypixelClient/: index.html
api/typescript/classes/HypixelException/: index.html
api/typescript/classes/InvalidApiKeyException/: index.html
api/typescript/classes/InvalidDataException/: index.html
api/typescript/classes/MissingFieldException/: index.html
api/typescript/classes/NbtUtils/: index.html
api/typescript/classes/RateLimitException/: index.html
api/typescript/classes/ResourceNotFoundException/: index.html
api/typescript/classes/UuidUtils/: index.html
api/typescript/enums/BazaarItem/: index.html
api/typescript/enums/CollectionType/: index.html
api/typescript/enums/GameType/: index.html
api/typescript/enums/GardenPlot/: index.html
api/typescript/enums/GardenResource/: index.html
api/typescript/enums/GardenUpgrade/: index.html
api/typescript/modules/: index.html
contributing/: index.html
docs/: contributing.md  index.md  installation.md
docs/api/python/: client.md  uuid_utils.md
docs/api/typescript/: README.md  modules.md
docs/guides/: faq.md  quickstart.md
examples/: README.md
examples/java/: Main.java  build.gradle
examples/javascript/: main.js  package-lock.json  package.json
examples/kotlin/: Main.kt  build.gradle.kts
examples/python/: main.py  pyproject.toml  requirements.txt
examples/typescript/: package-lock.json  package.json
examples/typescript/src/: main.ts
gradle/wrapper/: gradle-wrapper.properties
guides/faq/: index.html
guides/quickstart/: index.html
installation/: index.html
kotlin/: LICENSE  README.md  build.gradle.kts  gradle.properties  index.html  navigation.html  settings.gradle.kts
kotlin/-hy-wrapper/: package-list
kotlin/-hy-wrapper/com.joshy.hywrapper/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.data/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.data.playerdata/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.data.skyblock/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model/: index.html  parse-rate-limit.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.housing/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.other/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.playerdata/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.resources/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.skyblock/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.model.skyblock.profile/: index.html
kotlin/-hy-wrapper/com.joshy.hywrapper.util/: index.html
kotlin/scripts/: pages.json
python/: .pre-commit-config.yaml  README.md  pyproject.toml
python/src/hywrapper/: __init__.py  client.py  uuid_utils.py
python/src/hywrapper/data/: __init__.py  game_type.py
python/src/hywrapper/data/playerdata/: __init__.py  housing_setting.py
python/src/hywrapper/data/skyblock/: __init__.py  bazaar_item.py  collection_type.py  essence_type.py  garden_plot.py  garden_resource.py  garden_upgrade.py  museum_item.py  skill_tree_perk.py  skill_type.py  stat_type.py  visitor.py  visitors.py
python/src/hywrapper/models/: __init__.py  hypixel_response.py  rate_limit.py
python/src/hywrapper/models/housing/: __init__.py  housing_responses.py
python/src/hywrapper/models/other/: __init__.py  boosters_response.py  counts_response.py  leaderboards_response.py  punishment_stats_response.py
python/src/hywrapper/models/playerdata/: __init__.py  guild_response.py  online_response.py  player_response.py  recent_games_response.py
python/src/hywrapper/models/playerdata/player/: __init__.py
python/src/hywrapper/models/resources/: __init__.py  achievements_response.py  challenges_response.py  games_response.py  guilds_achievements_response.py  quests_response.py  vanity_response.py
python/src/hywrapper/models/skyblock/: __init__.py  auctions_ended_response.py  auctions_response.py  bazaar_response.py  bingo_response.py  collections_response.py  election_response.py  firesales_response.py  garden_response.py  items_response.py  museum_response.py  news_response.py  profile_response.py  profiles_response.py  skills_response.py
python/src/hywrapper/models/skyblock/profile/: __init__.py  bestiary.py  crimson_isle.py  dungeons.py  event.py  experimentation.py  foraging.py  inventory.py  jacobs_content.py  mining_core.py  pets_data.py  player_data.py  player_stats.py  rift.py  slayer.py
python/tests/: test_client.py  test_dependency_injection.py  test_rate_limit_retry.py  test_uuid_utils.py
search/: search_index.json
src/main/resources/: collections.json
typescript/: .eslintrc.json  README.md  package-lock.json  package.json
typescript/src/: client.ts  index.ts  types.ts
typescript/src/data/: GameType.ts  index.ts
typescript/src/models/: index.ts
typescript/src/utils/: nbt_utils.ts  uuid_utils.ts
typescript/tests/: client.test.ts  dependency_injection.test.ts  nbt_utils.test.ts  rate_limit_retry.test.ts  uuid_utils.test.ts
(+5601 files in other folders)
