[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
license = { file = "LICENSE" }
name = "HyWrapper"
version = "0.1.2"
description = "An asynchronous Python wrapper for the Hypixel API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "joshy" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "B",   # flake8-bugbear
]
ignore = [
    "E501", "C901"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/Joshy3282/HyWrapper"
Issues = "https://github.com/Joshy3282/HyWrapper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hywrapper"]

